[taotao-cloud-project-1596] add[ auth dubbo ]